Revision history for Perl extension Apache::Dispatch

0.13-dev

0.12 04.25.2009 16:06 PST
  - set library versions to $Apache::Dispatch::Util::VERSION so PAUSE
	can index them correctly

0.11 04.25.2009 14:32 PST
  - remove t/TEST.PL (it is not needed)
  - put version in Apache::Dispatch::Util to avoid issue with Apache2::Module
  - document PerlLoadModule for Dispatch* directives - ideysus@annocpan
  - reduce unnecessary log verbosity
  - use Apache::Bootstrap to bootstrap mod_perl version

0.10 01.08.2008
  - steal the RELEASE doc from Apache::Reload and adapt it - fred
  - steal the Makefile.PL from A::R, and merge it with our needed custom
    config directive generation, it detects the version more reliably - fred

0.10_03 12.14.2007
  - use the :withtestmore feature correctly - fred, thanks to geoff for the spot
  - use like() instead of ok( $foo =~ m/bar/ ) - fred

0.10_02  07.19.2007
  - fix the unadvertised feature which allows handling <Location /> - fred

0.10_01  10.23.2006
  - move common methods to Apache::Dispatch::Util and adjust @ISA for
	Apache*::Dispatch modules to use common methods via inheritance - fred
  - deprecated $Apache::Dispatch::DEBUG directive per dev notes in favor
	of DispatchDebug, which accepts the same arguments, see pod - fred
  - mod_perl2 compatibility via Apache2::Dispatch - fred
  - source code now under subversion at 
	http://svn.sourceforge.net/viewcvs.cgi/apache-dispatch/ - geoff, domm
  - project moved to http://sourceforge.net/projects/apache-dispatch - geoff
  * new maintainer: Fred Moyer <fred@redhotpenguin.com>
  - pass $rc to error handler to allow for finer grained error handling
  - print "Using/Exiting A::D" only if $debug>=1
  * new maintainer: Thomas Klausner, domm@zsi.at
  - fixed DispatchISA bug that kept adding the same classes to @ISA
    (Barrie Slaymaker)
  - fixed bug for <Location /> (thanks again to Barrie for the spot)
  - suggested use of NEXT.pm pseudoclass in AUTOLOAD documentation